fix(ui): page nagivation icons not showing in all-blogs

--- a/admin/assets/css/pagination.css
+++ b/admin/assets/css/pagination.css
@@ -13,7 +13,7 @@ div.blogify span.pagination span.page-numbers {
     gap: 5px;
 }
 
-div.blogify span.pagination span.page-numbers img.arrow{
+div.blogify span.pagination span.page-numbers img.arrow-jump{
     height: 10px;
 }
 
